KFSMI-3615 : cleaned out KFS properties from the KR resources file Removed non-overidden KR properties from the KFS resources file Added the KR resource file to the standard property file set

--- a/build.properties
+++ b/build.properties
@@ -207,7 +207,7 @@ settings.directory=${base.settings.directory}/${build.environment}/${ant.project
 # the property file that contains the log4j configuration for the application
 log4j.settings.file=${settings.directory}/${log4j.file}
 # the core configuration property files that should be available in the KualiConfigurationService context, along with configuration.properties
-core.property.files=classpath:ApplicationResources.properties
+core.property.files=classpath:KR-ApplicationResources.properties,ApplicationResources.properties
 # the institution specific configuration property files that should be available in the KualiConfigurationService context, along with configuration.properties
 institution.property.files=
 # all the configuration property files that should be available in the KualiConfigurationService context, along with configuration.properties
