--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1,25 +1,13 @@
-app.title=Kuali
-app.copyright=Copyright 2005-2008 The Kuali Foundation. All rights reserved.<BR/>Portions of Kuali are copyrighted by other parties as described in the <a target="_ack" href="acknowledgements.jsp">Acknowledgments</a> screen.
-#
-# replace these with an appropriate URL and message when implementing
-#
-app.feedback.linkText=Provide Feedback
-#app.feedback.link=insert feedback contact address here
-#
-# original development feedback link
-app.feedback.link=https://test.kuali.org/jira/secure/CreateIssue.jspa?pid=10091&issuetype=1
-#
-app.footer.link.1=http://www.kuali.org
-app.footer.linkText.1=kuali.org
+app.title=KFS
+
+url.accountingLineImport.instructions=html/help/AccountingLineImport.html
+warning.core.bo.AccountImportLengthMismatch=Warning: One or more imported lines was not the expected length
 
 # Question Messages
 document.question.continue.text=Do you want to continue?
 error.document.customerInvoiceWriteoff.emptyExplanation=Explanation is missing.
 error.document.customerInvoiceWriteoff.invalidExplanation=Explanation must be at least 10 characters long.
-document.question.cancel.text=Are you sure you want to cancel? 
 
-document.question.delete.text=Are you sure you want to delete?
-document.question.deleteContext.text=Are you sure you want to delete [b]{0}[/b]?
 document.journalVoucher.question.changeBalanceType.singleAmountToCreditDebitMode.text=Changing the balance type of this journal from [font red]{0}[/font] to [font red]{1}[/font][br] will eliminate the single amount field.  Instead, you'll be presented with credit and[br] debit amount fields to enter dollar amounts into.  When this change is made, the[br] amount for each accounting line will be reset to "$0.00".[br] {3}[br] All other values for the accounting lines will remain the same.[br][br][br] Are you sure you want to change the balance 0type for this journal voucher[br] document from [font red]{0}[/font] to [font red]{1}[/font]?
 document.journalVoucher.question.changeBalanceType.singleAmountToCreditDebitMode.externalEncumbrance.text=In addition, this change will introduce three new fields - "Ref Origin Code",<br> "Ref Number", and "Ref Type Code" fields, since they specifically apply to the <font color\="red">{1}</font> balance type.
 document.journalVoucher.question.changeBalanceType.creditDebitToSingleAmountMode.text=Changing the balance type of this journal from [font red]{0}[/font] to [font red]{1}[/font][br] will eliminate the debit and credit amount fields.  Instead, you'll be presented with a single[br] amount field to enter dollar amounts into.  When this change is made, the[br] amount for each accounting line will be reset to "$0.00".[br] {3}[br] All other values for the accounting lines will remain the same.[br][br][br] Are you sure you want to change the balance type for this journal voucher[br] document from [font red]{0}[/font] to [font red]{1}[/font]?
@@ -29,82 +17,15 @@ document.journalVoucher.question.changeBalanceType.NonExternalEncumbranceToExter
 document.journalVoucher.question.routeOutOfBalance.text=The [b]debit[/b] total of ${0} does not match the [b]credit[/b] total of ${1}. This Journal Voucher document is out of balance.[br][br]Do you still want to approve this Journal Voucher document?
 document.journalVoucher.question.routeOutOfBalanceSingleAmountMode.text=The total of this Journal Voucher document is ${0}. This Journal Voucher document is out of balance.[br][br]Do you still want to approve this Journal Voucher document?
 document.question.selectContinuationAccount.text=The account number {1} for {0} has expired. Would you rather use its continuation account ({2})?"
-document.question.saveBeforeClose.text=Would you like to save this document before you close it?
 document.question.allowInactiveObjectLevel.text=Object Level is inactive. Object Level Chart = {0}, Object Level Code = {1}, Object Level Name = {2}.  Do you want to use the inactive Object Level?
-document.question.disapprove.text=Are you sure you want to [b]disapprove[/b] this document?
-
-# lookup specific
-multiple.value.lookup.icon.label=Look Up/Add Multiple {0} Lines
-multiple.value.lookup.no.returnable.rows=There are no returnable items (i.e. no checkboxes) within the results.  Please perform another search or click cancel to return to the previous page.
-lookup.using.primary.keys=You have entered the primary key for this table ({0}) in the search criteria. Since these fields can be used to uniquely identify a row in this table, the other search criteria entered will be ignored.
-lookup.no.returnable.rows=There are no returnable items within the results.  Please perform another search or click cancel or return with no value to return to the previous page.
-error.fieldDoNotAllowWildcard= {0} does not accept wildcard.
-
-# Error Message Display Prefix
-errors.prefix=<li>
-errors.suffix=</li>
-
-error.custom={0}
 
 # Format Type Messages
-error.invalidDateTime={0} is not a valid date/time.
-error.numeric={0} should be numeric.
-error.invalidNegativeAmountForNonCorrection=Negative amounts are not allowed.
 error.zeroAmount="0.00" amounts are not allowed for {0}, and lines with 0.00 have been removed.
-error.zeroOrNegativeAmount="$0.00" amounts and negative amounts are not allowed on {0}.
-error.negativeAmount=Negative amounts are not allowed.
 
-# authorization error messages
-error.authorization.general= User {0} is not authorized to take action '{1}' on targets of type '{2}'
-error.authorization.inactiveDocumentType= Nobody is authorized to {1} documents of type '{2}' because that type is inactive
-error.authorization.documentType= User {0} is not authorized to {1} documents of type '{2}'
-error.authorization.document= User {0} is not authorized to {1} document '{2}'
-error.authorization.maintenance.newCopy=The maintenance document type {2} does not allow new or copy actions.
-error.authorization.module= User {0} is not authorized to use the {1} within module: {2}
-error.authorization.workgroupInitiation=Only members of workgroup(s) {0} have access to initiate documents of type '{1}'
 error.authorization.contractManagerAssignmentInitiation=Contract Manager Assignment Document cannot be initiated because there are no Requisitions awaiting contract manager assignment. 
-
-# Dictionary Error Messages
-error.required={0} is a required field.
-error.existence=The specified {0} does not exist.
-error.expired=The specified {0} is expired.
-error.inactive=The specified {0} is inactive.
-error.closed=The specified {0} is closed.
-error.minLength=The specified {0} must be at least {1} characters long.
-error.maxLength=The specified {0} must not be longer than {1} characters.
-error.invalidFormat=The {0} value '{1}' is not formatted correctly.
-
-error.inquiry=No records found for given parameters.
-error.maintenance.locked = This document cannot be Saved or Routed because the maintenance record is locked by <a href="{0}">#{1}</a>.
-error.maintenance.locked.long = This document cannot be Saved or Routed because the maintenance record is locked by <a href="{0}">#{1}</a>.<br />Either click the document number link to load the locking document instead of the current document, OR<br />Select new keys for this document that are not locked by another pending document.<br />No other validations have been processed, this document may contain other errors.<br />This document has not been Saved or Routed.
-error.adhoc.missing.person=Missing Ad Hoc Routing Person Network Id
-error.adhoc.inactive.person=Ad Hoc Routing Person is invalid for all modules
-error.adhoc.missing.workgroup=Missing Ad Hoc Routing Workgroup Name
-message.adhoc.annotation=Ad Hoc Routed by {0}
-
-error.inactivation.blocked = This document cannot be Routed because this document inactivates a record referenced by other active records.  <a href="{0}" target="blank">Click here to view all records blocking the inactivation of this record.</a>
-
-error.requiredForUs={0} is a required field for the United States.
-
-# file upload/download error messages
-error.uploadFile.null=Unable to upload selected file; please try again.
-error.unimplemented={0} has not yet been implemented
- 
-# note error messages
-error.documentNote.textRequired=Note text is required.
-error.send.note.notification.recipient=Recipient is required for sending note notification.
-error.send.note.notification.docStatus=Document must be saved before a note notification can be sent.
-message.send.note.notification.successful=Note notification was successfully sent.
-message.note.notification.annotation={0} has requested that {1} view the following note for this document\: \n {2}
 
 # Document Error Messages
 error.user.missing.permission={0} does not have permission {1} {2}.
-
-error.document.parameter.parameterType.invalid=The Parameter Type is not valid for a parameter with the given namespace.
-error.document.parameter.workgroupName.invalid=The entered workgroup ({0}) does not exist.
-error.document.parameter.workgroupName.notinboth=The initiator must be in both the old and new workgroups to edit this parameter.
-error.document.parameter.workgroupName.notinnew=The initiator must be in the given workgroup ({0}) to create this parameter.
-error.document.parameter.detailType.invalid=The entered component ({0}) does not exist.
 
 error.document.objectCode.illegal=Illegal value chosen for Object code: {0}
 error.document.objectCode.invalidReportsToObject=Reports to Object Code ({0}) does not exist in Reports to Chart ({1}). Please enter a valid Reports to Object Code for Reports to Chart ({1}), or search for one from the lookup.
@@ -119,12 +40,6 @@ error.document.objectCodeGlobalDetails.noChartFiscalYear=You must select at leas
 error.document.objectCodeGlobalDetails.noFiscalYear=You must select a Fiscal Year
 error.document.objectCodeGlobalDetails.noChart=You must select a Chart
 error.document.objectCodeGlobal.inactivationBlocking=The object code {0} cannot be inactivated because there are active records that reference it.  <a href="{1}" target="blank">Click here to view all records blocking the inactivation of this record.</a>
-
-error.document.noLongerExistsInKuali=The document does not exist in the Database.  It may have been cancelled prior to being saved.
-error.document.attachmentMaximumFileSizeExceeded=The file upload size limit has been exceeded.  Use your back button, and remove the file to be uploaded to proceed.
-error.document.noDescription=The document description is required.
-error.document.singleSectionNoAccountingLines=The document must contain at least one accounting line.
-error.document.noAccountingLines=The document must contain at least one accounting line in either section.
 
 # distinct errorParameters require distinct error keys, even if the error message is identical
 error.document.sourceSectionNoAccountingLines=The document must contain at least one accounting line in the "{0}" section.
@@ -328,10 +243,6 @@ error.document.payeeAchAccountMaintenance.duplicateAccount = This Payee ACH Acco
 #BankAccount Maintenance error messages
 error.document.bankAcctMaintenance.invalidBank=The Bank you entered is not valid.
 
-#KualiUser Maintenance error messages
-error.document.kualiUserMaintenance.cannotMarkInactive=You cannot mark a user as inactive if they are a member of a workgroup, a review hierarchy, or account delegate.
-error.document.kualiUserMaintenance.invalidEmpStatus=The employee status is not valid for making this person a Kuali user.
-
 #Tax error messages
 error.document.taxRegionMaintenance.cannotAddPastOrCurrentDateForTaxDistrict=Effective date should be a future date.
 error.document.taxRegionMaintenance.taxRateShouldBeBetween0And1=The value of tax rate should be between 0 and 1.
@@ -391,19 +302,9 @@ warning.cg.award.entryDateBeforeStartDate={0} is before {1}. Do you wish to cont
 warning.cg.award.subcontractorAmountGreaterThanAwardAmount={0} total amount is greater than total {1} amount.  Do you want to continue?
 
 # Messages
-message.route.successful=Document was successfully submitted.
-message.saved=Document was successfully saved.
-message.route.approved=Document was successfully approved.
-message.route.disapproved=Document was successfully disapproved.
-message.route.canceled=Document was successfully canceled.
-message.route.acknowledged=Document was successfully acknowledged.
-message.route.fyied=Document was successfully FYIed.
-message.nohelp=No Help text found for attribute in dictionary.
 message.journalVoucher.cancelledRoute=Routing for this document has been canceled.
-message.document.reloaded=Document was successfully reloaded.
 message.revert.successful=AccountingLine was successfully reverted.
 message.revert.unnecessary=AccountingLine contains no reversible changes.
-message.disapprove.noteTextIntro=Disapproval reason -
 
 message.subject.closeJobFailed = Close Batch Step: FAILED
 message.subject.closeJobSucceeded = Close Batch Step: SUCCEEDED
@@ -533,10 +434,6 @@ audit.mainPage.total.direct.less.total.indirect=Soft Audit Error: Total Indirect
 audit.mainPage.start.date.before.end.date=Hard Audit Error: End Date must be after Start Date.
 audit.mainPage.total.start.date.before.total.end.date=Hard Audit Error: End Date must be after Start Date.
 audit.mainPage.subcontractor.total.greater.direct=Hard Audit Error: Subcontractor amount can't be greater than Direct amount.
-
-# Date formatting
-format.timestampFullPrecision.dateFormat=MM/dd/yyyy hh:mm
-format.timestamp.dateFormat=MM/dd/yyyy
 
 # Help Text
 lookupHelpText=<font size\=+1><b>Lookup Help</b></font><br><br> <b>Specifying search criteria\:</b><br> <ol><li>Most fields will be uppercased for search.</li> <li>Dates should be specified as MM/dd/yyyy.</li> <li>Some fields have magnifying glass button for a sub lookup on that field.</li> <li>Wildcards allowed on strings are * and %</li> <li>Range operators allowed on numerics and dates are >,<,>\=,<\=, or ..<br> All operators except .. should be before date value. Operator .. should <br> separate date values.</li> <li>All fields have question button for viewing help information.</li> </ol> <b>Result Table\:</b> <ol><li>Each result field has link on header for sorting. Click once to sort ascending, <br> and click again to sort descending.</li> <li>Some row fields have links to inquiry. The inquiry will be presented in a new window. </li> <li>Click the return value link to select a row and return the key value to the previous page.<br> Select 'return with no value' or click the cancel button if you wish to return without returning a value.</li> </ol> <b>Maintenance Links\:</b> <ol> <li>The 'create new' link on the upper left corner of the lookup screen will <br> go to a maintenance document for creating a new record for this lookup type.</li> <li>For each result row the action column displays edit and copy links. The 'edit' link <br> will go to a maintenance document for editing the current record. The 'copy' link <br> will go to a new maintenance document but copy over attributes over the current record.</li>  </ol> <b>Export Functionality\:</b> <ol> <li>At the end of each result set, there are links for exporting the data to a different format.</li> <li>Click 'csv' to export the data as a comma delimited file, 'spreadsheet' to export the data as a spreadsheet,<br> or 'xml' to export the data as xml.</li> </ol> <br> 
@@ -1127,7 +1024,6 @@ error.purchaseOrder.split.atLeastOneItem.mustMove=At least one item must be pick
 error.purchaseOrder.split.atLeastOneItem.mustRemain=At least one item must be allowed to remain on the old Purchase Order.
 errors.recurring.type=You must select a recurring payment type if a begin and end date are entered.
 errors.recurring.dates=You must enter begin and end dates if a recurring type is selected.
-errors.postalCode.invalid=Vendor Postal Code is invalid; if Country is US, Postal Code must be of the format ##### or #####-####.
 errors.faxNumber.invalid=Fax number must use format ###-###-####.
 error.faxNumber.PoTransmissionType=A valid Vendor Fax Number (###-###-####) must be entered if a vendor is selected and the PO Transmission Type is Fax.
 error.vendorType.invalid=Invalid vendor type. You must select a vendor of type 'PO' for requisition and purchase order.
@@ -1372,30 +1268,6 @@ errors.reject.docucument.research.incomplete="This reject document is still bein
 testUsername= khuntley
 simpleTestingKey= simpleTestingValue
 complex.testing.key= complex testing value
-
-#
-# validationPattern regexes, for the field-level patterns
-# . character-level patterns are hard-coded, since their granularity should already be sufficient)
-# . special characters -- \ seems to be the only one so far -- must be escaped with a leading \
-# this is currently broken as the regex matches against what we get out of toString() on dates
-# which is actually 2006-10-19 (for example), so copying the timstamp regex as it works
-# validationPatternRegex.date= (0?[1-9]|1[012])/(0?[1-9]|[12][0-9]|3[01])/(19|2[0-9])[0-9]{2}
-validationPatternRegex.date= (19|2[0-9])[0-9]{2}-(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01])
-validationPatternRegex.timestamp= (19|2[0-9])[0-9]{2}-(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01])s+[0-9]{2}\:[0-9]{2}\:[0-9]{2}.[0-9]+
-#  emailAddress pattern is mostly made up out of whole cloth - it'll weed out most invalid email addresses
-validationPatternRegex.emailAddress= [A-Za-z][A-Za-z0-9_.-]*[A-Za-z0-9]@([A-Za-z0-9][A-Za-z0-9_-]*\\.)+[A-Za-z]{2,}
-#  since the leading negative is both optional and prefixed at runtime, the pattern doesn't include it
-validationPatternRegex.floatingPoint= ([0-9]*\\.)?[0-9]+
-#  manually derived, hopefully correctly, from the Java Language Spec
-validationPatternRegex.javaClass= [A-Za-z_$][_$a-zA-Z0-9]*(\\.[_$a-zA-Z0-9]+)*
-validationPatternRegex.month= (0?[1-9]|1[012])
-validationPatternRegex.year= (16|17|18|19|20)[0-9]{2}
-validationPatternRegex.zipcode= [0-9]{5}(-[0-9]{4})?
-validationPatternRegex.phoneNumber= [0-9]{3}-[0-9]{3}-[0-9]{4}
-
-#
-# documentAuthorizer properties
-documentAuthorizer.defaultClass=org.kuali.rice.kns.authorization.NullDocumentAuthorizer
 
 # Labor
 error.labor.invalidSalaryObjectCode=Invalid Salary Object Code.
