--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1047,7 +1047,6 @@ purchaseOrder.route.message.remove.hold.text=Your Purchase Order Remove from Pay
 purchaseOrder.route.message.confirm.award.text=[p]Please review the summary below. The 'Yes' button will complete the awarding of this quote and all purchase order and quote data will be saved.  Data on this quote cannot be updated after completion. The 'No' button will return you to the purchase order screen and not complete the awarding of this quote.[/p] <table class\="datatable" cellpadding\="0" cellspacing\="0"> <tr> <th align\=center class\="bord-l-b">Vendor Name&nbsp;</th> <th align\=center class\="bord-l-b">&nbsp;Awarded Date&nbsp;</th> <th align\=center class\="bord-l-b">&nbsp;Quote Status&nbsp;</th> <th align\=center class\="bord-l-b">&nbsp;Rank</th> </tr> {0} </table>
 purchaseOrder.route.message.confirm.award.row.text= <tr> <td class\="datacell">{0}&nbsp;</td> <td class\="datacell">{1}</td> <td class\="datacell">{2}&nbsp;</td> <td class\="datacell">{3}&nbsp;</td> </tr>
 purchaseOrder.route.message.cancel.note.text=Cancelled Quote\: 
-
 purchaseOrder.route.message.confirm.cancel.quote.text=The quote vendor information will be deleted and the order will return to an "In Process" status. Enter a cancellation reason then select the "Yes" button to continue the cancel process or select "No" to stop the cancel process.
 purchaseOrder.message.close.noteTextIntro=Note entered while closing a Purchase Order \: 
 purchaseOrder.message.void.noteTextIntro=Note entered while voiding a Purchase Order :
@@ -1085,6 +1084,7 @@ error.purchaseOrder.alternateVendor.dvType=An alternate payee vendor must not be
 error.purchaseOrder.alternateVendor.debarred=An alternate payee vendor must not be debarred.
 error.purchaseOrder.receivingDocRequiredId.pendingPreq=The receiving required indicator cannot be Yes while there are pending Payment Requests.  
 
+warning.purchaseorder.number.dont.disclose=NOTE: Do not disclose purchase order numbers to vendors unless the status of the order is Open or Closed.
 warning.purchaseOrder.encumber.nextFY=Warning: This PO will encumber against next fiscal year's budget. If the product or service will be shipped or performed before the end of the year then the year may need to be changed.[br]Do you want to continue?  Select "No" to change the year or "Yes" to continue the routing.
 error.nextFY.beginDate.invalid=Begin Date must be within the fiscal year for which you are encumbering funds.
 
