KFSMI-3133: convert SF Rebuilder report and clean up the nightly out reports - as well as kill my Toyota Origin Entry iterator in favor of Warren's Lexus Origin Entry Iterator

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2311,3 +2311,6 @@ message.gl.balancing.report.account.balance.row.count.history=%s ROW COUNT - CAL
 message.gl.balancing.report.account.balance.row.count.production=%s ROW COUNT - PROD.                           %,9d
 message.gl.balancing.report.encumbrance.row.count.history=%s ROW COUNT - CALC. %-25s %,9d
 message.gl.balancing.report.encumbrance.row.count.production=%s ROW COUNT - PROD.                           %,9d
+
+message.report.nightlyOut.ledger.total=Grand Total:
+message.report.nightlyOut.ledger.balanceType.total=Subtotal({0}):
