KULCAP-906: Fixed the error display when user not allowed with org/chart.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2240,7 +2240,8 @@ accounting.line.actions.balanceInquiry.label = Perform Balance Inquiry for {0} A
 accounting.line.actions.delete.label = Delete {0} Accounting Line {1}
 accounting.line.actions.add.label = Add {0} Accounting Line
 accounting.line.actions.copy.label = Copy {0} Accounting Line {1};
-
+#******** CAB Pretag Messages ****
+chart.org.disallowed.by.current.user = User has no permission for Chart of Accounts Code and Organization Code.
 #******** CAB GL Messages ****
 gl.assign.asset.invalid.capital.asset.number= Capital Asset Number {0} is not valid.
 invalid.generalledger.account.id = General Ledger Account Id {0} is not valid or is not active. 
