KFSMI-1850: shared postal code validation (implementation fixes KULPURAP-3911 and KULPURAP-3658)

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -907,6 +907,11 @@ error.document.purap.invalidOrganizationCode=Invalid organization code. Please s
 question.document.pur.systemTypeSwitching=Switching Capital Asset System Types clears some Asset Information. Do you wish to continue?
 message.document.pur.systemTypeSwitched=The Capital Asset System Type has been switched.
 
+
+error.USRequiresState.required=State is required when United States is selected as the country.
+error.USRequiresZip.required=Postal Code is required when United States is selected as the country.
+error.postalCode.invalid=If Country is US, Postal Code must be of the format ##### or #####-####."
+
 # Vendor Maintenance
 error.vendorMaint.VendorTypeRequiresTaxNumber=Tax number is required for the vendor type of {0}.
 error.vendorMaint.addVendor.vendor.exists=This tax number and tax type combination has already been assigned to an existing vendor.
