--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1049,7 +1049,8 @@ purchaseOrder.route.message.reopen.text=Your Purchase Order Reopen request was s
 purchaseOrder.route.message.split.text=Pick items to move to the new Purchase Order Split document.
 purchaseOrder.route.message.payment.hold.text=Your Purchase Order Payment Hold request was successfully submitted.
 purchaseOrder.route.message.remove.hold.text=Your Purchase Order Remove from Payment Hold request was successfully submitted.
-purchaseOrder.route.message.confirm.award.text=[p]Please review the summary below. The 'Yes' button will complete the awarding of this quote and all purchase order and quote data will be saved.  Data on this quote cannot be updated after completion. The 'No' button will return you to the purchase order screen and not complete the awarding of this quote.[/p] <table class\="datatable" cellpadding\="0" cellspacing\="0"> <tr> <th align\=center class\="bord-l-b">Vendor Name&nbsp;</th> <th align\=center class\="bord-l-b">&nbsp;Awarded Date&nbsp;</th> <th align\=center class\="bord-l-b">&nbsp;Quote Status&nbsp;</th> <th align\=center class\="bord-l-b">&nbsp;Rank</th> </tr> {0} </table>
+#purchaseOrder.route.message.confirm.award.text=[p]Please review the summary below. The 'Yes' button will complete the awarding of this quote and all purchase order and quote data will be saved.  Data on this quote cannot be updated after completion. The 'No' button will return you to the purchase order screen and not complete the awarding of this quote.[/p] <table class\="datatable" cellpadding\="0" cellspacing\="0"> <tr> <th align\=center class\="bord-l-b">Vendor Name&nbsp;</th> <th align\=center class\="bord-l-b">&nbsp;Awarded Date&nbsp;</th> <th align\=center class\="bord-l-b">&nbsp;Quote Status&nbsp;</th> <th align\=center class\="bord-l-b">&nbsp;Rank</th> </tr> {0} </table>
+purchaseOrder.route.message.confirm.award.text=[p]Please review the summary below. The 'Yes' button will complete the awarding of this quote and all purchase order and quote data will be saved.  Data on this quote cannot be updated after completion. The 'No' button will return you to the purchase order screen and not complete the awarding of this quote.[/p]
 purchaseOrder.route.message.confirm.award.row.text= <tr> <td class\="datacell">{0}&nbsp;</td> <td class\="datacell">{1}</td> <td class\="datacell">{2}&nbsp;</td> <td class\="datacell">{3}&nbsp;</td> </tr>
 purchaseOrder.route.message.cancel.note.text=Cancelled Quote\: 
 purchaseOrder.route.message.confirm.cancel.quote.text=The quote vendor information will be deleted and the order will return to an "In Process" status. Enter a cancellation reason then select the "Yes" button to continue the cancel process or select "No" to stop the cancel process.
@@ -2319,4 +2320,4 @@ message.gl.balancing.report.encumbrance.row.count.history=%s ROW COUNT - CALC. %
 message.gl.balancing.report.encumbrance.row.count.production=%s ROW COUNT - PROD.                           %,9d
 
 message.report.nightlyOut.ledger.total=Grand Total:
-message.report.nightlyOut.ledger.balanceType.total=Subtotal({0}):
+message.report.nightlyOut.ledger.balanceType.total=Subtotal({0})\:
