KFSMI-3133: the poster output summary report

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2323,3 +2323,10 @@ message.gl.balancing.report.encumbrance.row.count.production=%s ROW COUNT - PROD
 
 message.report.nightlyOut.ledger.total=Grand Total:
 message.report.nightlyOut.ledger.balanceType.total=Subtotal({0})\:
+
+message.report.poster.output.summary.total=Total
+message.report.poster.output.summary.balanceType.total=Subtotal({0})
+message.report.poster.output.summary.balanceType.fiscalYear.total=Subtotal({0},{1})
+message.report.poster.output.summary.balanceType.fiscalYear.fiscalPeriod.total=Subtotal({0},{1},{2})
+
+message.report.poster.output.summary.titleLine=Fiscal Year: {0} Balance Type Code: {1}
