--- a/build.properties
+++ b/build.properties
@@ -191,7 +191,7 @@ institution.spring.source.files=
 spring.source.files=${core.spring.source.files}${optional.module.spring.source.files}${institution.spring.source.files}
 kfs.rice.override.spring.files=spring-kfs-rice-overrides.xml
 # the core files that are included in the application spring context for unit testing
-core.spring.test.files=SpringBeansTest.xml,org/kuali/kfs/sys/spring-sys-test.xml,org/kuali/kfs/sys/spring-purap-test.xml
+core.spring.test.files=SpringBeansTest.xml,org/kuali/kfs/sys/spring-sys-test.xml,org/kuali/kfs/sys/spring-purap-test.xml,org/kuali/kfs/gl/spring-gl-test.xml
 # the institution specific files that are included in the application spring context for unit testing
 institution.spring.test.files=
 # all the files that are included in the application spring context for unit testing
