Added T payee type to PDP

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1771,6 +1771,7 @@ error.pdp.customerProfile.checkBank.required=Check Bank is required.
 error.pdp.customerProfile.achBank.required=ACH Bank is required.
 
 error.pdp.payeeLookupVendorEmployeeConfusion= {0} cannot be {1} when {2} or {3} has been entered.
+message.pdp.payeeLookup.noPayeeTypeSelection=Payee type defaulted to Employee for returned person rows.
 
 message.pdp.paymentLoad.fileThreshold=The total amount of this file {0} is greater than the customer threshold amount {1}
 message.pdp.paymentLoad.paydateOver30DaysPast=Payment date of {0} is more than 30 days ago
