Fix Jira KULPURAP-4047

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1104,6 +1104,7 @@ error.capitalAsset.item.not.cams.eligible=Please fix the object code {0} or remo
 error.capitalAsset.trans.type.must.be.asset.given.tradein=Capital Asset Transaction Type must be Asset Given In Trade.
 error.capitalAsset.no.vendor=No vendor has been selected, therefore the "same as vendor" function cannot be used.
 error.capitalAsset.incomplete.address=The following fields are missing from one of the Capital Asset locations: {0}.
+error.capitalAsset.required.for.purchase.order.sub.type = Capital Assets are being purchased - the information in the Capital Asset tab must be completed.
 
 # Requisition APO Ineligibility
 requisition.nonAPO.requisitionTotal.greaterThan.APOLimit=Requisition total is greater than the APO limit.
