KULCAP-1272: CAB GL Processing - Receiving NPE when click on a processed entry link

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2284,6 +2284,7 @@ error.asset.require.data.entry = Data required for either updating or creating a
 error.asset.update.allow.only = You cannot create a new asset with this transaction; you must update an existing asset. 
 error.asset.new.or.update.only = Only enter data for either updating or creating a new asset.
 error.asset.active.capital.asset.required = Asset must be active Capital Asset.
+warning.gl.processed = The GL line you selected has been processed to CAMS.
 #Lookup Messages
 title.return.url.value.prependtext=return value 
 title.action.url.value.prependtext=with 
