--- a/build.properties
+++ b/build.properties
@@ -162,18 +162,18 @@ validate.password=false
 # whether to validate the DD upon startup
 data.dictionary.validate=true
 # values used in KFS-PURAP B2B functions - all values but user agent derived by build.xml based on build.environment
-b2b.user.agent=
+b2b.user.agent=kfs
 b2b.test.environment=test
 b2b.production.environment=Production
-b2b.test.purchase.order.password=
+b2b.test.purchase.order.password=p01mport
 b2b.production.purchase.order.password=
-b2b.test.shopping.password=
+b2b.test.shopping.password=c#m1
 b2b.production.shopping.password=
-b2b.test.purchase.order.url=
+b2b.test.purchase.order.url=http://sciwmtest.sciquest.com/invoke/wm.tn/receive
 b2b.production.purchase.order.url=
-b2b.test.punch.back.url=
+b2b.test.punch.back.url=${application.url}/b2b.do?methodToCall=returnFromShopping
 b2b.production.punch.back.url=
-b2b.test.punch.out.url=
+b2b.test.punch.out.url=http://usertest.sciquest.com/apps/Router/ExternalAuth/cXML/KualiDemo
 b2b.production.punch.out.url=
 
 spring.transaction.bean.file=spring-jta.xml
