--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -91,8 +91,8 @@ question.document.bank.inactive=Bank code {0} is inactive. Do you want to use th
 error.accountingLineParser.invalidPropertyValue=Failed importing accounting lines. Invalid value '{0}' for property '{1}' in '{2}'.
 error.accountingLineParser.invalidFileFormat={0} is an unsupported file format. Please review the "Accounting Line Import" Help for information on supported file formats.
 
-error.accountingLine.inaccessibleAdd=Accounting lines for account {0} may not be added by user {1}
-error.accountingLine.inaccessibleDelete=Accounting lines for account {0} may not be deleted by user {1}
+error.accountingLine.inaccessibleAdd=Accounting lines for {0} {1} may not be added by user {2}
+error.accountingLine.inaccessibleDelete=Accounting lines for {0} {1} may not be deleted by user {2}
 error.accountingLine.inaccessibleUpdate=Existing accounting lines may not be updated to use {0} {1} by user {2}.
 error.accountingLine.deleteLastAccessible=Unable to delete last editable accountingLine
 error.accountingLine.deleteRule.invalidAccount=Unable to delete invalid {0} accounting line {1}
