--- a/build.properties
+++ b/build.properties
@@ -66,6 +66,7 @@ context.file=context.xml
 carol.file=carol.properties
 log4j.file=log4j.properties
 security.file=security.properties
+keystore.filename=ricekeystore
 configuration.file=configuration.properties
 p6spy.file=spy.properties
 web.file=web.xml
@@ -200,6 +201,12 @@ spring.test.files=${core.spring.test.files}${institution.spring.test.files}
 security.directory=${base.security.directory}/${build.environment}/${ant.project.name}
 # the single secure property file currently used by the application
 security.property.file=${security.directory}/${security.file}
+# the single keystore file currently used by the KSB to authenticate services
+keystore.file=${security.directory}/${keystore.filename}
+# a logical name for the above keystore file, should not need to be changed
+keystore.alias=rice
+# the password that will open the keystore
+keystore.password=r1c3pw
 # used by the DemostrationGradeEncryptionService and the workflow EncryptionService to encrypt / decrypt data in the database
 encryption.key=7IC64w6ksLU
 # the directory that contains the non-secure property files that are nonetheless external to the deployed application
