KULEFR-209: EC: Blanked out the percent because I wanted it to be zero - clicked recalculate - rec'd server error.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1343,7 +1343,7 @@ error.effort.lineExists = There must not be an existing line with the same Chart
 error.effort.accountClosed = Account cannot be closed.
 error.effort.invalidEffortPercent = Effort percent must be an integer from 0 to 100. 
 error.effort.totalEffortPercentageNot100 = Total effort percentage must be 100.
-error.effort.negativePayrollAmount = Payroll amount cannot be negative.
+error.effort.negativePayrollAmount = Payroll amount must be zero or a postive number.
 error.effort.noteRequiredWhenEffortChanged = A note explaining why a change was made must be provided.
 error.effort.noteRequiredWhenApprovedEffortCertificationExist = Approved effort certification exists for the employee {0} and report period {1}{2}. You must enter a note to indicate reason for recreating this effort certification.
 
