KULCAP-1309:  The  "Asset Representative Principal Name" field is no longer required, but is validated when document is submitted.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2029,6 +2029,7 @@ message.batch.report.depreciation.heading.figures=Figures
 message.batchUpload.title.pre.asset.tagging=Pre-Asset Tagging Batch.
 error.invalid.building.code=Building code {0} is not valid for campus code {1}.
 error.invalid.room.number={0}-{1}-{2} is not a valid room number.
+error.invalid.representative.id="{0}" is not a valid user.
 error.invalid.pre.tag.number=Tag number "{0}" already exists in the Database.
 error.invalid.no.detail.line = You must enter at least 1 pretag detail. Click on the Add button to insert pre-tag detail. 
 error.pre.tag.detail.excess=Total tagging lines must be equal or less than the quantity ordered "{0}".
@@ -2332,4 +2333,4 @@ message.report.poster.output.summary.balanceType.total=Subtotal({0})
 message.report.poster.output.summary.balanceType.fiscalYear.total=Subtotal({0},{1})
 message.report.poster.output.summary.balanceType.fiscalYear.fiscalPeriod.total=Subtotal({0},{1},{2})
 
-message.report.poster.output.summary.titleLine=Fiscal Year: {0} Balance Type Code: {1}
+message.report.poster.output.summary.titleLine=Fiscal Year\: {0} Balance Type Code\: {1}
