KULAR-808 : Added validation for the NonInvoiced section of the Payment Application.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1989,8 +1989,14 @@ error.document.paymentApplication.amountToBeAppliedExceedsAmountOutstanding=Amou
 error.document.paymentApplication.fullAmountNotApplied=The full amount has not been applied. Please apply all funds.
 error.document.paymentApplication.amountToBeAppliedExceedsOpenInvoiceDetailAmount=The amount to be applied exceeds the open invoice detail amount.
 error.document.paymentApplication.amountToBeAppliedMustBePositive=The amount to be applied must be greater than zero.
-error.document.paymentApplication.nonArLineRequired=Non-AR amount field is required.
-error.document.paymentApplication.nonArLineAmountMustBePositive=Non-AR amount field must be positive.
+error.document.paymentApplication.nonArLineAmountRequired=Non-AR amount field is required.
+error.document.paymentApplication.nonArLineChartInvalid=Chart value entered [{0}] is invalid.
+error.document.paymentApplication.nonArLineAccountInvalid=Account value entered [{0}] is invalid.
+error.document.paymentApplication.nonArLineSubAccountInvalid=Sub-account value entered [{0}] is invalid.
+error.document.paymentApplication.nonArLineObjectCodeInvalid=Object code value entered [{0}] is invalid.
+error.document.paymentApplication.nonArLineSubObjectCodeInvalid=Sub-object code value entered [{0}] is invalid.
+error.document.paymentApplication.nonArLineProjectCodeInvalid=Project code value entered [{0}] is invalid.
+error.document.paymentApplication.nonArLineAmountMustBePositive=Amount field must be positive.
 error.document.paymentApplication.nonArLineAmountExceedsInvoiceBalance=Non-AR amount cannot exceed the selected invoice balance.
 error.document.paymentApplication.nonArLineAmountExceedsBalanceToBeApplied=Non-AR amount cannot exceed the balance to be applied.
 error.document.paymentApplication.quickAppliedExceedsCashControlTotalAmount=Cannot apply more than the available control amount.
