KFSMI-21, KFSMI-941, KFSMI-3428: convert year end gl jobs from PDF -> text, add section to balance forwards job, clean up org reversion job so that closed accounts always use R2

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2041,7 +2041,6 @@ message.batch.report.depreciation.heading.figures=Figures
 message.batchUpload.title.pre.asset.tagging=Pre-Asset Tagging Batch.
 error.invalid.building.code=Building code {0} is not valid for campus code {1}.
 error.invalid.room.number={0}-{1}-{2} is not a valid room number.
-error.invalid.representative.id="{0}" is not a valid user.
 error.invalid.pre.tag.number=Tag number "{0}" already exists in the Database.
 error.invalid.no.detail.line = You must enter at least 1 pretag detail. Click on the Add button to insert pre-tag detail. 
 error.pre.tag.detail.excess=Total tagging lines must be equal or less than the quantity ordered "{0}".
@@ -2345,4 +2344,11 @@ message.report.poster.output.summary.balanceType.total=Subtotal({0})
 message.report.poster.output.summary.balanceType.fiscalYear.total=Subtotal({0},{1})
 message.report.poster.output.summary.balanceType.fiscalYear.fiscalPeriod.total=Subtotal({0},{1},{2})
 
+message.report.poster.output.summary.titleLine=Fiscal Year\: {0} Balance Type Code\: {1}
+
+message.report.yearEnd.nominalActivityClosing.ledger.titleLine=N O M I N A L   A C T I V I T Y   C L O S I N G   R E P O R T
+message.report.yearEnd.balanceForwarding.openAccount.ledger.titleLine=O P E N   A C C O U N T   B A L A N C E   F O R W A R D S   S T A T I S T I C S
+message.report.yearEnd.balanceForwarding.closedAccount.ledger.titleLine=C L O S E D   A C C O U N T   B A L A N C E   F O R W A R D S   S T A T I S T I C S
+message.report.yearEnd.encumbranceForwards.ledger.titleLine=E N C U M B R A N C E   F O R W A R D S   S T A T I S T I C S
+message.report.yearEnd.organizationReversion.ledger.titleLine=O R G A N I Z A T I O N   R E V E R S I O N   S T A T I S T I C S 
 message.report.poster.output.summary.titleLine=Fiscal Year\: {0} Balance Type Code\: {1}
