KFSMI-3059 : modularization test work - changes to DD parsing and spring shutdown to allow for the test to start up the context multiple times

--- a/build.properties
+++ b/build.properties
@@ -192,11 +192,12 @@ institution.spring.source.files=
 spring.source.files=${core.spring.source.files}${optional.module.spring.source.files}${institution.spring.source.files}
 kfs.rice.override.spring.files=spring-kfs-rice-overrides.xml
 # the core files that are included in the application spring context for unit testing
-core.spring.test.files=SpringBeansTest.xml,org/kuali/kfs/sys/spring-sys-test.xml,org/kuali/kfs/sys/spring-purap-test.xml,org/kuali/kfs/gl/spring-gl-test.xml
+core.spring.test.files=SpringBeansTest.xml,org/kuali/kfs/sys/spring-sys-test.xml,org/kuali/kfs/gl/spring-gl-test.xml
+optional.module.spring.test.files=,org/kuali/kfs/sys/spring-purap-test.xml
 # the institution specific files that are included in the application spring context for unit testing
 institution.spring.test.files=
 # all the files that are included in the application spring context for unit testing
-spring.test.files=${core.spring.test.files}${institution.spring.test.files}
+spring.test.files=${core.spring.test.files}${optional.module.spring.test.files}${institution.spring.test.files}
 # the directory where secure application property files are located
 security.directory=${base.security.directory}/${build.environment}/${ant.project.name}
 # the single secure property file currently used by the application
